--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+node_modules/
+# Ignore master key for decrypting credentials and more.
+/config/master.key
